# SAMP-Sync-Single

./: .gitignore  CMakeLists.txt  KRACHIK_client_Dll_2016.sln - Ярлык.lnk  README.md
C++/: DLL_client.cpp  DLL_client.h  DLL_main.cpp  EXE_main.cpp  EXE_main.h
C++/lib/: libboost_thread-vc120-mt-s-1_59.lib  libboost_thread-vc120-mt-sgd-1_59.lib
Sanny Builder/CLEO/: 4 NetworkCoreDll.cs  4 NetworkCoreDll.txt  4 memory_new.cs  4 memory_new.txt  5create_explosion.cs  5create_explosion.txt
Sanny Builder/cleo/: 1 AIR.cs  1 AIR.txt  1 WASTfuck.cs  1 WASTfuck.txt  1 Weapon.cs  2 Build.cs  2 Build.txt  2 initPackagetype.cs  2 initPackagetype.txt  2 starter 2016.txt  2 starter 2017.cs  2 starter 2017.txt  2 starterLocal2017.cs  2_throwLog GTA_TEST - копия.c1s  2_throwLog GTA_TEST.c1s  2_throwLog GTA_TEST.txt  2_throwLog.c1s  2_throwLog.txt  3_AttachMarkerToVehicle.cs  3_RenderEventOnTheMap.cs  3_sound.cs  4_ConnectToServer.cs  4_ConnectToServer.txt  4_PlayerActorPossittions.cs  4_PlayerActorPossittions.ini  4_PlayerActorPossittions.txt  4_SyncOnfootVehiclePossittions bckp .cs  4_SyncOnfootVehiclePossittions.cs  4_SyncOnfootVehiclePossittions.ini  4_SyncOnfootVehiclePossittions.txt  4_admin_tools(main_funcs).1cs  4_admin_tools(main_funcs).txt  4_admin_tools(main_funcs)[0].txt  4_admin_tools_v2 17.04.2017 начиннаю добавлять отправку координат на севере.c1s  4_admin_tools_v2.cs  4_admin_tools_v2.ini  4_admin_tools_v2.txt  4_reciver.ini  4_reciver.txt  4_reciver_.txt  (+43 more)
Sanny Builder/cleo/SAMP++/: car_hendle.ini
Sanny Builder/cleo/SAMP++/MyUtiletes/: 3_sound.txt  5_Cleo_TestDebug.cs
Sanny Builder/cleo/SAMP++/VehicleManager/: 6_car_spawn.cs  6_garbage_car(inputHeandle).cs  6_inputHeandle.cs
Sanny Builder/cleo/SAMP++/core/: 4_admin_tools(main_funcs).cs  4_admin_tools(main_funcs).ini  4_admin_tools(main_funcs).txt
Sanny Builder/cleo/SAMP++/reciver/: 4_reciver_.cs
Sanny Builder/cleo/backup/: 4_reciver_old.cs
Sanny Builder/cleo/cleo_saves/: cs0.sav
Sanny Builder/cleo/cleo_text/: TrafficControler.fxt
Sanny Builder/cleo/tmp/: 4_admin_tools(main_funcs).cs  4_admin_tools(main_funcs).txt  5_getServerCar.cs
sourse/: BaseRequest.cpp  BaseRequest.h  CLEO_manager.cpp  CLEO_manager.h  DLL_client.cpp  DLL_client.h  DLL_main.cpp  Decisions_making.cpp  Decisions_making.h  ELocal_command.h  EXE_main.cpp  EXE_main.h  GTA_SA_DynamicMemoryManager.cpp  GTA_SA_DynamicMemoryManager.h  MyUtiles.cpp  MyUtiles.h  Object_List.h  Output_Deque.cpp  Output_Deque.h  PackedDecompose.cpp  PackedDecompose.h  ServerPackage.cpp  ServerPackage.h  ServerVehicle.cpp  ServerVehicle.h  UDP_network.cpp  UDP_network.h  Vehicle.cpp  Vehicle.h  VehicleManager.cpp  VehicleManager.h  core.cpp  core.h  input_output_cleo_prms.cpp  input_output_cleo_prms.h  package_type.cpp  package_type.h  poolVehicleManager.cpp  poolVehicleManager.h
sourse.bckp 30.12.2016/: DLL_client.cpp  DLL_client.h  DLL_main.cpp  EXE_main.cpp  MyUtiles.cpp  MyUtiles.h  Object_List.cpp  core.cpp  core.h
sourse/Virtual_CLEO/: CLEO_connect.cpp  CLEO_connect.h  CLEO_machine.cpp  CLEO_machine.h  CLEO_reciver.cpp  CLEO_reciver.h  CLEO_reg_heandle_from_Pool.cpp  CLEO_reg_heandle_from_Pool.h  CLEO_send_ClientVehiclePossitions.cpp  CLEO_send_ClientVehiclePossitions.h  CLEO_send_requestCarOfLocalPool.cpp  CLEO_send_requestCarOfLocalPool.h  CLEO_send_request_car_spawn.cpp  CLEO_send_request_car_spawn.h  CLEO_sender_self_pos.cpp  CLEO_sender_self_pos.h
sourse/client test EXE/: main.cpp
sourse/lib/: libboost_date_time-vc120-mt-s-1_59.lib
